force-app/main/default/objects/Survey_Question__c/fields/Negative__c.field-meta.xml
<CustomField>
    <fullName>Negative__c</fullName>
    <label>Negative</label>
    <summaryFilterItems>
        <field>Survey_Answer__c.Value__c</field>
        <operation>equals</operation>
        <value>No</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Survey_Answer__c.Selected__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Survey_Answer__c.Survey_Question__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>