force-app/main/default/objects/Survey_Question__c/fields/Positive__c.field-meta.xml
<CustomField>
    <fullName>Positive__c</fullName>
    <label>Positive</label>
    <summaryFilterItems>
        <field>Survey_Answer__c.Value__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Survey_Answer__c.Selected__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Survey_Answer__c.Survey_Question__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>