force-app/main/default/objects/Survey_Question__c/fields/Question_Id__c.field-meta.xml
<CustomField>
    <fullName>Question_Id__c</fullName>
    <label>Question Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>